--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -595,6 +595,7 @@ header {
 
 .header__cart-link {
   display: flex;
+  padding-right: 2rem;
   text-decoration: none;
   color: inherit;
 }
@@ -619,11 +620,34 @@ header {
 .header__cart-price {
   flex-basis: 7rem;
   text-align: right;
+  margin-right: 0.5rem;
+}
+
+.header__cart-amount {
+  position: absolute;
+  top: -0.3rem;
+  right: 1rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.header__cart-incr,
+.header__cart-decr {
+  transform: scale(1.3, 1.3);
+  color: var(--primary-color);
+  cursor: pointer;
+}
+
+.header__cart-incr:hover,
+.header__cart-decr:hover {
+  color: var(--text-color);
 }
 
 .header__cart-delBtn {
+  font-size: 1.4rem;
   position: absolute;
-  top: 3.8rem;
+  top: 4.3rem;
   right: 1rem;
   cursor: pointer;
   color: var(--text-color);
